--- a/DHKUH_Training_Setup.Rmd
+++ b/DHKUH_Training_Setup.Rmd
@@ -5,6 +5,10 @@ date: "2025-06-20"
 output: html_document
 ---
 
+## Summary:
+This script can be used to generate simulated datasets, including household 
+survey data, microbial data (IDEXX QuantiTray and plating results), and 
+Taqman Array Card (TAC) qPCR output files for 3 different sample types.  
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -12,107 +16,26 @@ knitr::opts_knit$set(root.dir ="/Users/hkamato/Desktop/GitHub/DHKUH Data Analysi
 
 # Load required packages
 library(tidyverse)
+library(lubridate)
 ```
 
-## Simulate TAC data
-```{r tac}
-# Set parameters
-n_targets <- 48
-samples_per_card <- 7
-n_cards <- 20
-household_ids <- paste0("HH", sprintf("%03d", 1:(n_cards * samples_per_card)))
-targets <- c(
-  # Bacteria
-  "Campylobacter", "Salmonella", "Shigella", "E. coli O157", "ETEC", "EPEC", 
-  "EAEC", "STEC", "Vibrio cholerae", "Yersinia enterocolitica",
-  "Clostridium difficile", "Aeromonas", "Helicobacter pylori", 
-  "Listeria monocytogenes", "Bacteroides fragilis",
+## Create IDs and sample types
+```{r}
+# Household/sample IDs and sample types
+household_ids <- paste0("HH", sprintf("%03d", 1:140))
+sample_types <- c("effluent", "compost", "produce")
 
-  # Viruses
-  "Norovirus GI", "Norovirus GII", "Rotavirus A", "Astrovirus", 
-  "Adenovirus 40/41", "Sapovirus", "Enterovirus", "Hepatitis A", "Hepatitis E",
-
-  # Protozoa
-  "Giardia", "Cryptosporidium", "Entamoeba histolytica", 
-  "Blastocystis", "Cyclospora", "Dientamoeba fragilis",
-
-  # Helminths
-  "Ascaris", "Trichuris", "Ancylostoma", "Necator", "Strongyloides",
-
-  # Antibiotic Resistance Genes (optional group)
-  "blaCTX-M", "blaNDM", "mecA", "tetA", "sul1", "qnrS",
-
-  # Fecal markers / process controls
-  "HF183", "CrAssphage", "Sketa22", "BacHum", "MS2", "Spiked_Extraction_Control", "No Template Control"
-)
-
-# Function to simulate Cq values
-simulate_cq <- function() {
-  if (runif(1) < 0.2) {  # 20% chance of being undetected
-    return("Undetermined")
-  } else {
-    return(round(rnorm(1, mean = 30, sd = 2), 2))
-  }
-}
-
-# Function to generate one TAC card worth of data
-simulate_card <- function(card_num, sample_ids) {
-  data <- list()
-  for (i in 1:(samples_per_card + 1)) {  # 7 samples + 1 blank
-    sample_id <- ifelse(i <= samples_per_card, sample_ids[i], "BLANK")
-    well_pos <- paste0("A", i)
-    for (target in targets) {
-      cq <- simulate_cq()
-      amp <- ifelse(cq == "Undetermined", "No Amp", "Amp")
-      result <- ifelse(cq == "Undetermined", "Undetermined", "Positive")
-      amp_score <- ifelse(cq == "Undetermined", 0, round(runif(1, 0.3, 1.0), 2))
-      cq_conf <- ifelse(cq == "Undetermined", 0, round(runif(1, 0.7, 1.0), 2))
-      cq_sd <- ifelse(cq == "Undetermined", NA, round(runif(1, 0.1, 0.5), 2))
-
-      row <- tibble(
-        Well = i,
-        `Well Position` = well_pos,
-        Omit = FALSE,
-        Sample = sample_id,
-        Target = target,
-        Task = "UNKNOWN",
-        Reporter = "FAM",
-        Quencher = "Non Fluorescent",
-        `Amp Status` = amp,
-        `Amp Score` = amp_score,
-        Result = result,
-        `Quality Issues` = "",
-        Cq = as.character(cq),
-        `Cq Confidence` = cq_conf,
-        `Cq Mean` = ifelse(cq == "Undetermined", NA, as.numeric(cq)),
-        `Cq SD` = cq_sd,
-        `Auto Threshold` = TRUE,
-        Threshold = 0.2,
-        `Auto Baseline` = TRUE,
-        `Baseline Start` = 3,
-        `Baseline End` = 49
-      )
-      data <- append(data, list(row))
-    }
-  }
-  bind_rows(data)
-}
-
-# Simulate and save all 20 cards
-output_dir <- "simulated_TAC_cards"
-dir.create(output_dir, showWarnings = FALSE)
-
-for (card_num in 1:n_cards) {
-  sample_range <- ((card_num - 1) * samples_per_card + 1):(card_num * samples_per_card)
-  sample_ids <- household_ids[sample_range]
-  card_data <- simulate_card(card_num, sample_ids)
-
-  write_csv(card_data, file = file.path(output_dir, sprintf("sim_card_%02d.csv", card_num)))
-}
-
-message("Simulation complete. Files saved in: ", output_dir)
+# Create full sample-level dataset
+sample_metadata <- expand.grid(
+  household_id = household_ids,
+  sample_type = sample_types,
+  stringsAsFactors = FALSE
+) %>%
+  arrange(household_id, sample_type) %>%
+  mutate(sample_id = paste0(household_id, "_", sample_type))
 ```
 
+## Simulate survey data
 ```{r survey}
 
 # Create 140 household IDs
@@ -180,12 +103,9 @@ print(head(survey_data))
 write_csv(survey_data, "/Users/hkamato/Desktop/GitHub/DHKUH Data Analysis Training/simulated_data/survey_data_simulated.csv")
 ```
 
+## Simulate IDEXX data
 ```{r idexx}
-
-# Set up household/sample IDs
-household_ids <- paste0("HH", sprintf("%03d", 1:140))
-
-# Helper function to simulate counts
+# Helper function
 simulate_quanti_tray_counts <- function(n) {
   tibble(
     small_cell_count = sample(0:49, n, replace = TRUE),
@@ -193,42 +113,138 @@ simulate_quanti_tray_counts <- function(n) {
   )
 }
 
-# Simulate Quanti-Tray data for each target
-quanti_data <- tibble(household_id = household_ids)
+n <- nrow(sample_metadata)  # 420
 
-quanti_data <- quanti_data %>%
+# IDEXX data
+microbio_data <- sample_metadata %>%
   bind_cols(
-    simulate_quanti_tray_counts(140) %>% rename_with(~paste0("total_coliform_", .)),
-    simulate_quanti_tray_counts(140) %>% rename_with(~paste0("e_coli_", .)),
-    simulate_quanti_tray_counts(140) %>% rename_with(~paste0("ar_total_coliform_", .)),
-    simulate_quanti_tray_counts(140) %>% rename_with(~paste0("ar_e_coli_", .))
+    simulate_quanti_tray_counts(n) %>% rename_with(~paste0("total_coliform_", .)),
+    simulate_quanti_tray_counts(n) %>% rename_with(~paste0("e_coli_", .)),
+    simulate_quanti_tray_counts(n) %>% rename_with(~paste0("ar_total_coliform_", .)),
+    simulate_quanti_tray_counts(n) %>% rename_with(~paste0("ar_e_coli_", .))
   )
 
-# Simulate ESBL E. coli culture results
-set.seed(123)  # For reproducibility
-esbl_data <- tibble(
-  household_id = household_ids,
-  esbl_e_coli_present = rbinom(140, 1, 0.35),  # 35% positivity
-  esbl_e_coli_cfu = 0
-)
-
-# If present, assign CFU count (0–250)
-esbl_data <- esbl_data %>%
+# ESBL data
+microbio_data <- microbio_data %>%
   mutate(
-    esbl_e_coli_cfu = if_else(esbl_e_coli_present == 1, sample(1:250, 140, replace = TRUE), 0)
+    plate_weight = case_when(sample_type == "effluent" | sample_type == "compost" ~ sample(0.301:0.425, n, replace = TRUE),
+                             sample_type == "produce" ~ NA_real_),
+    wet_weight = case_when(sample_type %in% c("effluent", "compost") ~ runif(n, min = 4.901, max = 5.125),
+                           sample_type == "produce" ~ NA_real_),
+    dry_weight = case_when(sample_type == "effluent" ~ sample(2.85:4.55, n, replace = TRUE),
+                           sample_type == "compost" ~ sample(3.81:5.101, n, replace = TRUE),
+                           sample_type == "produce" ~ NA_real_),
+    esbl_e_coli_present = rbinom(n, 1, 0.3),
+    esbl_e_coli_cfu = if_else(esbl_e_coli_present == 1, sample(1:250, n, replace = TRUE), 0)
   )
 
-# Combine all microbiological data
-microbiol_data <- quanti_data %>%
-  left_join(esbl_data, by = "household_id")
+# Save and preview
+head(microbio_data)
 
-# View first few rows
-print(head(microbiol_data))
-
-# Optionally save to CSV
-write_csv(microbiol_data, "/Users/hkamato/Desktop/GitHub/DHKUH Data Analysis Training/simulated_data/microbial_data_simulated.csv")
-
-
-
+write_csv(microbio_data, "/Users/hkamato/Desktop/GitHub/DHKUH Data Analysis Training/simulated_data/microbial_data_simulated.csv")
 ```
 
+
+## Simulate TAC data
+```{r tac}
+
+# Number of TAC cards needed: 7 samples per card
+n_cards <- ceiling(nrow(sample_metadata) / 7)
+
+# Simulate pathogen targets (you can customize this list)
+targets <- c(
+  # Bacteria
+  "Campylobacter", "Salmonella", "Shigella", "E. coli O157", "ETEC", "EPEC", 
+  "EAEC", "STEC", "Vibrio cholerae", "Yersinia enterocolitica",
+  "Clostridium difficile", "Aeromonas", "Helicobacter pylori", 
+  "Listeria monocytogenes", "Bacteroides fragilis",
+
+  # Viruses
+  "Norovirus GI", "Norovirus GII", "Rotavirus A", "Astrovirus", 
+  "Adenovirus 40/41", "Sapovirus", "Enterovirus", "Hepatitis A", "Hepatitis E",
+
+  # Protozoa
+  "Giardia", "Cryptosporidium", "Entamoeba histolytica", 
+  "Blastocystis", "Cyclospora", "Dientamoeba fragilis",
+
+  # Helminths
+  "Ascaris", "Trichuris", "Ancylostoma", "Necator", "Strongyloides",
+
+  # Antibiotic Resistance Genes (optional group)
+  "blaCTX-M", "blaNDM", "mecA", "tetA", "sul1", "qnrS",
+
+  # Fecal markers / process controls
+  "HF183", "CrAssphage", "Sketa22", "BacHum", "MS2", "Spiked_Extraction_Control", "No Template Control"
+)
+
+simulate_card_file <- function(card_num, samples_on_card, out_dir = "./simulated_data/simulated_cards") {
+  # Add 8th sample as NTC
+  ntc_sample <- tibble(
+    sample_id = paste0("NTC_card", sprintf("%02d", card_num)),
+    household_id = NA,
+    sample_type = "NTC"
+  )
+  
+  full_samples <- bind_rows(samples_on_card, ntc_sample)
+
+  # Define TAC well layout (A1–H6, assuming 48 targets, 8 samples, 6 targets per column)
+  wells <- paste0(rep(LETTERS[1:8], each = 6), rep(1:6, 8))
+
+  # Expand data for all targets
+  df <- expand_grid(
+    Sample = full_samples$sample_id,
+    Target = targets
+  ) %>%
+    arrange(Sample, Target) %>%
+    mutate(
+      Cq = ifelse(Sample == ntc_sample$sample_id, NA, ifelse(runif(n()) < 0.3, round(runif(n(), 20, 35), 2), NA_real_)),
+      AMP = case_when(
+        !is.na(Cq) ~ "Amp",
+        runif(n()) < 0.1 ~ "Inconclusive",
+        TRUE ~ "No Amp"
+      ),
+      `Amp Score` = ifelse(!is.na(Cq), round(runif(n(), 1.2, 2.0), 2), round(runif(n(), 0.0, 1.1), 2)),
+      Result = case_when(
+        !is.na(Cq) ~ "Positive",
+        AMP == "Inconclusive" ~ "Equivocal",
+        TRUE ~ "Negative"
+      ),
+      `Cq Conf` = ifelse(!is.na(Cq), round(runif(n(), 0.8, 1.0), 2), round(runif(n(), 0.0, 0.5), 2)),
+      `Cq SD` = ifelse(!is.na(Cq), round(runif(n(), 0.1, 1.0), 2), NA_real_)
+    )
+
+  # Assign wells (repeat A1–H6 for each target)
+  df <- df %>%
+    group_by(Sample) %>%
+    mutate(Well = rep(wells[1:length(targets)], length.out = n())) %>%
+    ungroup()
+
+  # Create output directory if needed
+  dir.create(out_dir, showWarnings = FALSE)
+
+  # Create safe filename
+  date <- Sys.Date() + days(card_num)
+  time <- format(Sys.time(), "%H%M%S")
+  file_name <- paste0("card", sprintf("%02d", card_num), "_hka_", format(date, "%Y%m%d"),
+                      "_Results_", format(date, "%Y%m%d"), "_", time, ".csv")
+
+  # Write file
+  write_csv(df, file.path(out_dir, file_name))
+
+  return(file_name)
+}
+
+# Split across 60 cards
+n_cards <- ceiling(nrow(sample_metadata) / 7)
+card_files <- vector("character", n_cards)
+
+for (i in 1:n_cards) {
+  start <- (i - 1) * 7 + 1
+  end <- min(i * 7, nrow(sample_metadata))
+  card_samples <- sample_metadata[start:end, ]
+  card_files[i] <- simulate_card_file(i, card_samples)
+}
+
+# Show generated files
+print(card_files)
+```
