--- a/scripts/Script1_Data_Processing.Rmd
+++ b/scripts/Script1_Data_Processing.Rmd
@@ -4,15 +4,22 @@ author: "Heather Amato"
 date: "2025-06-22"
 output: html_document
 ---
+white for notes and in run chucnk we have to use hash sign
+
+```{
+
+```
+
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
 # Install packages
-install.packages(c("here","tidyverse","dplyr","readxl"))
+#install.packages(c("here","tidyverse","dplyr","readxl"))
 
-install.packages("remotes")                        # if not already installed
-remotes::install_github("jknappe/quantitray")      # installs the package directly from GitHub
+#install.packages("remotes")                        # if not already installed
+#remotes::install_github("jknappe/quantitray")      # installs the package directly from GitHub
 
 # Load libraries
 library(here)
@@ -31,6 +38,7 @@ In this session, we will clean and process .csv files including
 #### Read data into RStudio
 We will be using the here() package which relates all file paths to the directory in which this script is stored. This makes it easier for people to collaborate across computers, as long as the folder structure is the same. We recommend storing all data on the cloud (Box or Drive) and using the desktop Box/Drive app to be able to directly access your Box/Drive folders from your local computer. For this workshop, you will be utilizing the folder on your desktop that you created with the forked GitHub repository.   
 ```{r read.dat}
+#test<- read_csv("Users/Lenovo/Documents/GitHub/Pathogen-Data-Analysis-Training/survey_data_simulatied.csv")
 
 # Read microbiological data
 # (there are also packages you can install and load, like read_xl(), for reading .xlsx files)
@@ -42,6 +50,8 @@ tac_folder <- here("simulated_data", "simulated_cards")
 # Read and combine all TAC .xlsx output files into tac_raw
 tac_raw <- list.files(tac_folder, full.names = TRUE, pattern = "\\.xlsx$") %>%
   map_dfr(read_csv, .id = "source_file", show_col_types = FALSE)
+#remove test data
+rm(test)
 ```
 
 ## MICROBIAL DATA
@@ -53,6 +63,8 @@ summary(microbio_df) # summary of data
 head(microbio_df, n=8) # view top 8 rows
 unique(microbio_df$sample_id) %>% length() # number of samples
 table(microbio_df$sample_type) # number of rows in dataset by type
+#View(microbio_df) #it shows all chart
+
 ```
 
 #### Clean and process microbio dataset
@@ -68,8 +80,10 @@ microbio_clean <- microbio_df %>%
   ) %>%
   dplyr::select(-c(sample_id, plate_weight, wet_weight, dry_weight, wet_soil_mass, dry_soil_mass))
 
-# Workshop task: Check your new variables
+# Workshop task: Check your new variables,-c substraction
 # Add code here to check soil_moisture (continuous) and sample_type (categorical)
+table(microbio_clean$sample_type)#frequency table for categorial
+summary(microbio_clean$soil_moisture)#summary of cotiunuous vars
 
 ```
 
